# runstream

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
fixtures/: regression_tools.json
fixtures/example_run/: meta.json
schemas/: run_record.json
src/runstream/: __init__.py  __main__.py  api.py  ask.py  cli.py  http_middleware.py  ingest.py  models.py  parquet_export.py  store.py  tools.py  watch_ingest.py
tests/: conftest.py  test_api.py  test_ask_mock.py  test_export_parquet.py  test_ingest.py  test_post_runs.py  test_rate_limit.py  test_tools.py
