[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "runstream"
version = "0.2.0"
description = "Experiment run ingestion, API surface, and analysis agent (research prototype)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.5",
  "typer>=0.12",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "watchdog>=4.0",
]

[project.optional-dependencies]
llm = ["openai>=1.40"]
dev = ["pytest>=8.0", "httpx>=0.27", "openai>=1.40"]

[project.scripts]
runstream = "runstream.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
